from ..api_schema_base import APISchemaBase
from ..common import SchemaKind


class FieldAsset(APISchemaBase):
    """
    \\deprecated This schema will be removed in a future release.
    References to this schema should be updated to refer to VolumeFieldAsset.
    
    """

    schema_kind: SchemaKind = SchemaKind.NonAppliedAPI
